# financial-sdk

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
config/: default.yaml  field_mapping.yaml
skills/financial/: SKILL.md  report_template.md
src/: financial_sdk_cli.py  financial_sdk_cli_diagnose.py  financial_sdk_mcp_server.py
src/financial_sdk/: __init__.py  adapter_manager.py  base_adapter.py  cache.py  config.py  exceptions.py  facade.py  models.py  monitor.py
src/financial_sdk/adapters/: __init__.py  ashare_adapter.py  hk_adapter.py  longbridge_cli_adapter.py  us_adapter.py
src/financial_sdk/analytics/: __init__.py  analytics_base.py  efficiency.py  fcf.py  growth.py  intrinsic_value.py  metrics_calculator.py  piotroski.py  profitability.py  safety.py  unified.py  valuation.py
src/financial_sdk/price/: __init__.py  price_models.py  price_provider.py
tests/: conftest.py  test_adapter_manager.py  test_adapters.py  test_analytics.py  test_cache.py  test_cli.py  test_exceptions.py  test_facade.py  test_integration.py  test_integration_mock.py  test_intrinsic_value.py  test_longbridge_adapter.py  test_models.py  test_monitor.py  test_piotroski.py  test_price_provider.py
